<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="wifidemo1">WIFIDEMO1</string>
    <string name="wifidemo2">WIFIDEMO_CONTROL</string>
    <string name="wifidemo3">WIFIDEMO_ANDROID_WIFI</string>
    <string name="wifidemo4">WIFIDEMO_WIFIGUAN</string>
    <!--WIFI DEMO2-->
    <string name="str_checked">打开....</string>
    <string name="str_uncheck">关闭....</string>
    <string name="str_start_wifi_failed">打开失败</string>
    <string name="str_start_wifi_done">打开成功</string>
    <string name="str_stop_wifi_failed">打开失败</string>
    <string name="str_stop_wifi_done">关闭成功</string>
    <string name="str_wifi_enabling">正在启动....</string>
    <string name="str_wifi_disabling">正在关闭....</string>
    <string name="str_wifi_disabled">已关闭</string>
    <string name="str_wifi_unknow">未知....</string>

    <!-- WIFI Demo 5-->
    <string name="hello">Hello World, Android_WifiActivity!</string>
    <string name="wifisecretconnect">Wifi密码连接</string>
    <string name="signal_strength">信号强度</string>
    <string name="security_level">安全性</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="connect">连接</string>
    <string name="disconnect">忘记</string>


    <string name="conn_status">连接状态</string>
    <string name="ip_address">IP地址</string>
    <string name="wifi_demo2">Wifi连接Demo2</string>

    <!-- wifi 传图-->
    <string name="wifichuantu">Wifi传图</string>


    <!-- UI Dialog Demo1 -->
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="cancel">取消</string>

</resources>
