<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tum.androiddemo.WIFI.WIFIActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_wifi_wifidemo1"
            style="@style/style_wifi_btn"
            android:text="@string/wifidemo1"/>
        <Button
            android:id="@+id/btn_wifi_wifidemo2"
            style="@style/style_wifi_btn"
            android:text="@string/wifidemo2"/>
        <Button
            android:id="@+id/btn_wifi_wifidemo3"
            style="@style/style_wifi_btn"
            android:text="@string/wifidemo3"/>

        <Button
            android:id="@+id/btn_wifi_wifidemo4"
            style="@style/style_wifi_btn"
            android:text="@string/wifidemo4"/>
        <Button
            android:id="@+id/btn_wifi_wifidemo5"
            style="@style/style_wifi_btn"
            android:text="@string/wifisecretconnect"/>
        <Button
            android:id="@+id/btn_wifi_wifidemo6"
            style="@style/style_wifi_btn"
            android:text="@string/wifichuantu"/>

    </LinearLayout>

</ScrollView>
